2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Update generated .mk files.

	* headers.mk,
	* tests/unit_test/unit-tests.mk: Regen.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Add a new figure on the main page.

	* doc/img/genericity.png,
	* doc/img/src/genericity.svg: New.

	* doc/mainpage.dox: Include this figure.

2012-02-27  Guillaume Lazzara  <z@lrde.epita.fr>

	Add new documentation groups.

	* doc/Doxyfile.in: Use .dox file.

	* doc/Makefile.am: New dependencies.

	* mln/core/concept/object.hh: Move doc content...
	* doc/mainpage.dox: ... here.

	* doc/groups/accu.hh,
	* doc/groups/graph.hh,
	* doc/groups/images.hh,
	* doc/groups/main.hh,
	* doc/groups/neighb.hh,
	* doc/groups/site_set.hh,
	* doc/groups/util.hh,
	* doc/groups/win.hh: Rename ...

	* doc/groups/accu.dox,
	* doc/groups/graph.dox,
	* doc/groups/images.dox,
	* doc/groups/main.dox,
	* doc/groups/neighb.dox,
	* doc/groups/site_set.dox,
	* doc/groups/util.dox,
	* doc/groups/win.dox: ... as this.

2012-02-01  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/registration/icp.hh: Cite article.

2012-02-01  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix Milena doc (un)installation.

	* doc/Doxyfile.in: Fix paths.

	* doc/Makefile.am: Fix install/uninstall rules.

2013-03-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* test/unit_test/unit-tests.mk: Update.

2013-01-03  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/labeling/colorize.hh: Do not recompute previously computed
	colors.

2012-11-13  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/histo/equalize.hh: Fix.

2012-11-13  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/histo/equalize.hh: Revamp.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* tests/unit_test/unit-tests.mk: Regen.

2012-05-28  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/fun/x2x/rotation.hh: Remove alpha and axis attributes.

2012-05-28  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/registration/icp.hh: Cleanup some debug.

2012-05-28  Guillaume Lazzara  <z@lrde.epita.fr>
